--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -16,8 +16,8 @@ defaults
     timeout queue   50s
 
 listen stats
-    bind *:1936
-    #bind *:1936 ssl crt /usr/local/etc/haproxy/certs/stats.pem
+    #bind *:1936
+    bind *:1936 ssl crt /host/haproxy/certs
 
     mode            http
     log             global
@@ -38,19 +38,24 @@ listen stats
 
 frontend localnodes
     bind *:80
-    #bind *:443 ssl crt /usr/local/etc/haproxy/certs
+    bind *:443 ssl crt /host/haproxy/certs
 
     mode http
  
-    # Define path for lets encrypt
-    acl is_letsencrypt url_beg /.well-known/acme-challenge/
-    use_backend letsencrypt if is_letsencrypt
-
     # Redirect non www to www
     http-request redirect code 301 location https://www.%[hdr(host)]%[capture.req.uri] if !{ hdr_beg(host) -i www } !{ hdr_reg(host) -i ^[a-zA-Z0-9\-]*\.[A-Za-z0-9\-]*\.[A-Za-z0-9]*$ }
 
     # Redirect http to https
-    #redirect scheme https if !{ ssl_fc }
+    redirect scheme https if !{ ssl_fc }
+
+    # Define path for nextcloud
+    acl is_nextcloud url_beg /nextcloud
+    use_backend letsencrypt if is_nextcloud
+    use_backend nextcloud if { ssl_fc_sni nextcloud.*.* }
+
+    # Define path for lets encrypt
+    acl is_letsencrypt url_beg /.well-known/acme-challenge/
+    use_backend letsencrypt if is_letsencrypt
 
     # Default backend
     default_backend default
@@ -59,4 +64,16 @@ backend default
     mode http
     balance leastconn
     option forwardfor
-    server web01 nextcloud:80 check
+    #server web01 default:80 check
+
+backend nextcloud
+    mode http
+    balance leastconn
+    option forwardfor
+    #server web01 nextcloud:80 check
+
+backend letsencrypt
+    mode http
+    balance leastconn
+    option forwardfor
+    #server web01 letsencrypt:80 check
