haproxy.conf adapted for nextcloud

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -43,14 +43,14 @@ frontend localnodes
     mode http
  
     # Redirect non www to www
-    http-request redirect code 301 location https://www.%[hdr(host)]%[capture.req.uri] if !{ hdr_beg(host) -i www } !{ hdr_reg(host) -i ^[a-zA-Z0-9\-]*\.[A-Za-z0-9\-]*\.[A-Za-z0-9]*$ }
+    #http-request redirect code 301 location https://www.%[hdr(host)]%[capture.req.uri] if !{ hdr_beg(host) -i www } !{ hdr_reg(host) -i ^[a-zA-Z0-9\-]*\.[A-Za-z0-9\-]*\.[A-Za-z0-9]*$ }
 
     # Redirect http to https
     redirect scheme https if !{ ssl_fc }
 
     # Define path for nextcloud
     acl is_nextcloud url_beg /nextcloud
-    use_backend letsencrypt if is_nextcloud
+    use_backend nextcloud if is_nextcloud
     use_backend nextcloud if { ssl_fc_sni nextcloud.*.* }
 
     # Define path for lets encrypt
@@ -70,7 +70,7 @@ backend nextcloud
     mode http
     balance leastconn
     option forwardfor
-    #server web01 nextcloud:80 check
+    server web01 nextcloud:80 check
 
 backend letsencrypt
     mode http
