added nextcloud dav

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -50,6 +50,8 @@ frontend localnodes
 
     # Define path for nextcloud
     acl is_nextcloud url_beg /nextcloud
+    acl is_nextcloud url_beg /.well-known/carddav
+    acl is_nextcloud url_beg /.well-known/caldav
     use_backend nextcloud if is_nextcloud
     use_backend nextcloud if { ssl_fc_sni nextcloud.*.* }
 
@@ -70,6 +72,7 @@ backend nextcloud
     mode http
     balance leastconn
     option forwardfor
+    http-response set-header Strict-Transport-Security max-age=15552000;\ includeSubDomains;\ preload;
     server web01 nextcloud:80 check
 
 backend letsencrypt
