added lektor and security for haproy stats

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -15,9 +15,8 @@ defaults
     timeout server  50s
     timeout queue   50s
 
-listen stats
-    #bind *:1936
-    bind *:1936 ssl crt /host/haproxy/certs
+listen stats-local
+    bind 127.0.0.1:1999
 
     mode            http
     log             global
@@ -33,10 +32,26 @@ listen stats
     stats hide-version
     stats refresh 30s
     stats show-node
-    stats auth admin:password2345
     stats uri  /
 
-frontend localnodes
+userlist admin-user
+  user admin insecure-password eigenerserver.ch
+
+frontend stats
+    bind *:1936 ssl crt /host/haproxy/certs
+
+    mode            http
+
+    default_backend stats
+
+frontend lektor-admin-page-ssl
+    bind *:5000 ssl crt /host/haproxy/certs
+
+    mode http
+
+    default_backend lektor
+
+frontend services
     bind *:80
     bind *:443 ssl crt /host/haproxy/certs
 
@@ -66,7 +81,7 @@ backend default
     mode http
     balance leastconn
     option forwardfor
-    #server web01 default:80 check
+    server web01 webserver:80 check
 
 backend nextcloud
     mode http
@@ -80,3 +95,25 @@ backend letsencrypt
     balance leastconn
     option forwardfor
     #server web01 letsencrypt:80 check
+
+backend lektor
+    mode http
+    balance leastconn
+    option forwardfor
+    server lektor01 lektor:5000 check
+    rspirep ^Location:\ http://(.*)      Location:\ https://\1
+    acl admin_white_list src 192.168.1.0/24
+    tcp-request content accept if admin_white_list
+    tcp-request content reject
+    acl auth-admin-user http_auth(admin-user)
+    http-request auth realm Admin-User if !auth-admin-user
+
+backend stats
+    mode http
+    server stats-localhost localhost:1999 check
+    acl admin_white_list src 192.168.1.0/24
+    tcp-request content accept if admin_white_list
+    tcp-request content reject
+    acl auth-admin-user http_auth(admin-user)
+    http-request auth realm Admin-User if !auth-admin-user
+
