--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,3 +1,8 @@
+# Hedgehog Cloud by www.eigener-server.ch https://www.eigener-server.ch/en/igel-cloud \
+# is licensed under a Creative Commons Attribution 4.0 International Lizenz \
+# http://creativecommons.org/licenses/by/4.0/ \
+# To remove the links visit https://www.eigener-server.ch/en/igel-cloud"
+
 global
     log 127.0.0.1 local0 notice
     maxconn 2000
