--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -99,7 +99,7 @@ backend letsencrypt
     mode http
     balance leastconn
     option forwardfor
-    #server web01 letsencrypt:80 check
+    server web01 letsencrypt:80 check
 
 backend lektor
     mode http
